test/src/e2e_vm_tests/test_programs/should_fail/type_alias_generic/src/main.sw
script;

#[allow(dead_code)]
struct Generic<T> {}

#[allow(dead_code)]
type MyGeneric = Generic;

fn main() {}
